--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,10 @@
-<h2 id="title">Welcome to Ember.js</h2>
+<h2 id="title">Welcome to NYC Times Square's Find-A-Restaurant App, created in Ember.js</h2>
+
+
+
+<br>
+{{input value=search  placeholder="Search Cuisine Type"}}
+<button {{action 'search'}}> GO </button>
+<br>
 
 {{outlet}}
