added initial styling

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,6 +1,7 @@
-<h2 id="title">Welcome to NYC Times Square's Find-A-Restaurant App, created in Ember.js</h2>
+<div class="main-content">
 
 
+<h1 id="title">Welcome to NYC Times Square's Find-A-Restaurant App, created in Ember.js</h1>
 
 <br>
 {{input value=search  placeholder="Search Cuisine Type"}}
@@ -8,3 +9,5 @@
 <br>
 
 {{outlet}}
+
+</div>
