--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,15 +1,15 @@
 body {
-    background-color: #C0C0C0;
+    background-color: #778899;
 }
 
 
 .main-content {
     width: 1350px;
     padding: 25px;
-    border: 25px solid purple;
+    border: 25px solid navy;
     margin-left: auto;
     margin-right: auto;
-    background-color: #FFCC66
+    background-color: #F0E68C
 }
 
 
